# epydra

./: README.md  prova.csv  pyproject.toml
scripts/: clean_auto.py
src/epydra/: __init__.py  auto.py  cleaners.py  definitions.py  io.py  main.py  operations.py  pipeline.py  resources.py  types.py
src/epydra/data/: pollutant_names.json  pollutant_units.json  pollutants.json  stations.csv
