[project]
name = "epydra"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "gulbord", email = "guglielmo.bordin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.36.1",
]

[project.scripts]
epydra = "epydra:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
