[project]
name = "epydra"
version = "0.3.0"
readme = "README.md"
authors = [
    { name = "gulbord", email = "guglielmo.bordin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.37.1",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
epydra = "epydra.main:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "numpy>=2.4.1",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = "none"
reportExplicitAny = "none"
